--- a/src/template.html
+++ b/src/template.html
@@ -14,30 +14,31 @@
 </head>
 
 <body>
+  <h1>LEADERBOARD</h1>
 
-    <div class="card">
-        <div class="header">
-          <div class="title">
-            <h1>Today's todo</h1>
+  <div class="container">
+      <div class="leader-board-div">
+          <div class="recent-scores">
+              <h2>Recent Scores</h2>
+              <button id="refresh">Refresh</button>
           </div>
-          <div class="refresh">
-            <button class="refresh-btn">
-              <ion-icon name="sync-outline"></ion-icon>
-            </button>
+          <div class="score-spans">
+      
+
           </div>
-        </div>
-        <div class="task-list">
-          <form class="form-input">
-            <input type="text" id="todo" placeholder="Today's to do" />
-            <button class="send"><ion-icon name="send"></ion-icon></button>
-          </form>
-        </div>
-  
-        <div class="task-ul"></div>
-        <div class="clear-all">
-          <button class="clear-completed">clear completed tasks</button>
-        </div>
+
       </div>
+      <div class="add-score-div">
+          <h2>ADD YOUR SCORE</h2>
+
+          <input type="text" placeholder="Your name">
+          <input type="text" placeholder="Your score">
+          <button id="submit-button">Submit</button>
+
+      </div>
+  </div>
+
+   
 
 
     <script src="./index.js"></script>
